fixed layout bugs in resume list

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -114,7 +114,7 @@ dt {
 }
 ul li {
     list-style: none;
-    text-align: justify; /* body at line 250 causes poor alignment, hence justifying. This shifts whole ul to the left so place inside <div> */
+    text-align: left; /* body at line 250 causes poor alignment, hence new alignment. This shifts whole ul to the left so pad the ul */
 }
 ul li:before {
     /*content: ">>";*/
